# pyo3_decimal

./: .gitignore  README.md  bench.py
pyo3_decimal/: Cargo.toml  pyproject.toml  setup.py
pyo3_decimal/src/: lib.rs
pyo3_decimal/tests/: test_pyo3_capsule_api.py
pyo3_decimal_api/: Cargo.toml  pyproject.toml
pyo3_decimal_api/src/: lib.rs
pyo3_decimal_api/tests/: test_pyo3_capsule_user.py
pyo3_decimal_user/: Cargo.toml  pyproject.toml  setup.py
pyo3_decimal_user/pyo3_decimal_user/: __init__.py
pyo3_decimal_user/src/: lib.rs
pyo3_decimal_user/tests/: test_pyo3_decimal_user.py
