[package]
name = "pyo3-capsule-api"
version = "0.1.0"
authors = ["fx kirin <fx.kirin@gmail.com>"]
edition = "2018"

[lib]
name = "pyo3_capsule_api"
crate-type = ["cdylib"]

[dependencies]
rust_decimal = {version = "1.27.0", features=["serde-str"]}
num-runtime-fmt = "0.1.2"
bincode = "1.3.3"
serde = {version = "1.0.151", features = ["derive"]}

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]
