[package]
name = "pyo3_decimal_user"
version = "0.1.0"
authors = ["fx kirin <fx.kirin@gmail.com>"]
edition = "2018"

[lib]
name = "pyo3_decimal_user"
crate-type = ["cdylib"]

[dependencies]
gdb_breakpoint = "0.1.8"
pyo3_decimal_api = {path = "../pyo3_decimal_api"}

[dependencies.pyo3]
version = "0.16.6"
features = ["extension-module"]
