[package]
name = "pyo3_decimal_user"
version = "0.1.0"
authors = ["fx kirin <fx.kirin@gmail.com>"]
edition = "2021"

[lib]
name = "pyo3_decimal_user"
crate-type = ["cdylib"]

[dependencies]
gdb_breakpoint = "0.1.8"
pyo3_decimal_api = {path = "../pyo3_decimal_api"}
rust_decimal = "1.27.0"

[dependencies.pyo3]
version = "0.23.3"
features = ["extension-module"]
